--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@ a{
   color: #06c;
   font-size: 16px;
 }
-img{
+/* img{
   width: 100%;
-}
+} */
 .container{
   min-height: 700px;
   margin: auto;
@@ -53,25 +53,29 @@ nav a:hover{
   text-align:center;
   display: grid;
   grid-template-columns: 2fr 1fr;
-  margin: 0px 0px 50px 0px;
   background-color: #f5f5f7;
-  padding: 10px;
   margin: 20px;
   border-radius: 5px;
 }
 .card__figure{
-  padding: 30px;
+  height: 400px;
+}
+.card__img{
+  width: 100%;
+  height: 100%;
 }
 .card__figcaption{
   margin: auto;
+  height: 250px;
   text-align: left;
-  padding: 10px;
+  padding: 30px;
 }
 .card__subtitle{
+  color: black;
   font-family: 'PT Sans Narrow';
   font-weight: bold;
   font-style: normal;
-  font-size: 50px;
+  font-size: 30px;
 }
 .card__text{
   font-family: 'Rubik';
@@ -89,11 +93,11 @@ nav a:hover{
 .card__article--2{
   display: grid;
   grid-template-columns: auto auto;
+  /* padding: 50px; */
 }
 .card__article--2 article{
   display: grid;
   grid-template-columns: auto;
-  min-height: 812px;
 }
 
 /* pieDePagina */
@@ -173,32 +177,31 @@ footer a{
   border-radius: .2em;
   cursor: pointer;
 }
+
 /* @media screen */
 @media screen and (max-width: 992px) {
   .card__article{
       display: grid;
       grid-template-columns: auto;
- }
+  }
 
- .card__article--2{
-  grid-template-columns: auto;
-  min-height: 500px;
+  .card__article--2{
+      grid-template-columns: auto;
+  }
+
+  .card__subtitle{
+    font-size: 20px;
+  }
+
+  .form{
+  max-width: 300px;
+  font-size: 20px;
+  }
 }
 
-.card__article--2 article{
-  min-height: auto;
-}
 
-/* button */
-.card__Button{
-  max-width: 200px;
- }
-.card__subtitle{
-  font-size: 30px;
- }
-
- .form{
-   max-width: 300px;
-   font-size: 30px;
- }
+@media screen and (max-width: 600px) {
+  .card__figure{
+    height: 200px;
+  }
 }
