--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,8 @@ nav a:hover{
 .card__figure{
   margin: auto;
   background-color: var(--white);
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 5px 5px 0px 0px;
+  /* opacity: 80%; */
   height: 400px;
   width: 80%;
 }
