--- a/css/MediaScreen.css
+++ b/css/MediaScreen.css
@@ -25,5 +25,17 @@
     .card__figcaption{
       width: 80%;
     }
+    .error{
+      grid-template-rows: 80px  auto 100px;
+    }
     
+    .error__title{
+        font-size: 30px;
+    }
+
+    .error__text{
+      font-size: 15px;
+      width: 80%;
+      margin: auto;
+  }
 }
