--- a/css/Contact.css
+++ b/css/Contact.css
@@ -10,7 +10,6 @@
 .form__container{
     width: 100%;
     display: grid;
-    /* gap: 1em; */
     grid-auto-columns: 100%;
 }
 
@@ -49,7 +48,8 @@
     color: var(--white);
     border: none;
     font-weight: 500;
-    padding: .7em 0;
+    padding: 1em 0;
+    margin-top: 20px;
     border-radius: .2em;
     cursor: pointer;
 }
