--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -44,12 +44,16 @@
 
 .form__cta{
     font-size: 1rem;
-    background-color: var(--blue);
+    background-color: var(--blackNav);
     color: var(--white);
     border: none;
-    font-weight: 500;
+    font-weight: bold;
     padding: 1em 0;
     margin-top: 20px;
-    border-radius: .2em;
+    border-radius: 1em;
     cursor: pointer;
+}
+
+.form__cta:hover{
+    background-color: var(--black);
 }
