--- a/src/components/css/app.css
+++ b/src/components/css/app.css
@@ -1,15 +1,15 @@
 :root {
   --blue: #06c;
   --black: #000000;
+  --blackNav: #2c2c2c;
+  --blackClair: #3f3f3f;
   --white: #ffffff;
   --whiteCard: #f5f5f7;
-  --blackNav: #2c2c2c;
   --whitekNav: #d9d9dd;
   --forminputc: #bbb0bb;
-  
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -19,17 +19,17 @@
   width: 0px;
 }
 
-body{
+body {
   background-color: var(--white);
 }
 
-a{
+a {
   text-decoration: none;
   color: var(--blue);
   font-size: 16px;
 }
 
-.container{
+.container {
   min-height: 80vh;
   margin-top: 80px;
   margin-bottom: 30px;
