--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -43,8 +43,10 @@
 }
 
 .form__cta{
+    all: unset;
+    text-align: center;
     font-size: 1rem;
-    background-color: var(--blackNav);
+    background-color: var(--blackClair);
     color: var(--white);
     border: none;
     font-weight: bold;
