--- a/src/components/css/menu.css
+++ b/src/components/css/menu.css
@@ -10,14 +10,16 @@ nav{
     top: 0;
     z-index: 1;
     width: 100%;
+    height: 50px;
 }
 
 nav a{
     color: var(--whitekNav);
     padding: 10px;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-nav a:hover{
+nav a:active{
     color: var(--white);
 }
