--- a/src/components/css/share.css
+++ b/src/components/css/share.css
@@ -3,16 +3,17 @@
 }
 
 .Share__container {
-  /* display: hide; */
+  display: hide;
   width: 100%;
+  height: 100%;
   position: fixed;
   display: grid;
-  background-color: rgba(0, 0, 0, 0.226);
-  min-height: 650px;
+  background-color: rgba(0, 0, 0, 0.902);
 }
 
 .Share {
-  min-width: 700px;
+  width: 60%;
+  border-radius: 10px;
   background-color: var(--whiteCard);
   background-color: white;
   margin: auto;
@@ -20,17 +21,11 @@
 
 .Share__header {
   display: grid;
-  background-color: black;
-  color: white;
+  background-color: rgb(234, 230, 230);
+  border-radius: 10px 10px 0px 0px;
   grid-template-columns: auto auto;
   justify-content: space-between;
   padding: 20px;
-}
-
-.bi-x-square {
-  margin: auto;
-  font-size: 20px;
-  cursor: pointer;
 }
 
 .Share__contents {
@@ -40,31 +35,58 @@
 }
 
 .Share__img {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin: auto;
   width: 100px;
+  border-radius: 5px;
   background-color: var(--whiteCard);
   border-radius: 5px;
+  box-shadow: 1px 1px 1px 1px #42424272;
 }
 
+.Share__subtiitle{
+  margin-left: 20px;
+}
+
+.Share__text{
+  margin: 20px 0px 0px 20px;
+}
 .Share__link {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: rgb(10, 149, 241);
   display: grid;
   grid-template-columns: auto;
   padding: 20px;
+  cursor: pointer;
 }
 
-.Share__input {
+.Share__link:active {
+  color: black;
+}
+
+.FiX{
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-size: 30px;
+  color: black;
+  cursor: pointer;
+}
+
+.FiX:active{
+  font-size: 30px;
+  color: rgb(10, 149, 241);
+}
+/* .Share__input {
   padding: 10px;
   outline: none;
-}
+} */
 
-.hare__input--bi {
-  padding: 20px;
-}
 
-.hare__input--bi .bi {
-  font-size: 20px;
-  margin-right: 10px;
-}
-
-.bi-share {
-  display: none;
-}
