--- a/src/components/css/card.css
+++ b/src/components/css/card.css
@@ -1,89 +1,103 @@
-.card__container{
-    display: grid;
-    grid-template-columns: auto;
+.card__container {
+  display: grid;
+  grid-template-columns: auto;
 }
 
 /* card__container--2 */
-.card__container--2{
-    grid-template-columns: auto auto;
+.card__container--2 {
+  grid-template-columns: auto auto;
 }
 
-.card__container--2 .card__figcaption{
-    width: 80%;
+.card__container--2 .card__figcaption {
+  width: 80%;
 }
 
-.card__article{
-    display: grid;
-    background-color: var(--whiteCard);
-    text-align:center;
-    margin: 20px;
-    border-radius: 5px;
-}
-  
-.card__figure{
-    margin: auto;
-    background-color: var(--white);
-    border-radius: 5px 5px 0px 0px;
-    height: 400px;
-    width: 80%;
-}
-.card__img{
-    width: 100%;
-    height: 100%;
-}
-.card__figcaption{
-    display: grid;
-    margin: auto;
-    height: 200px;
-    width: 40%;
+.card__article {
+  display: grid;
+  background-color: var(--whiteCard);
+  text-align: center;
+  margin: 20px;
+  border-radius: 5px;
 }
 
-.card__figcaption_text{
-    margin: auto;
+.card__figure {
+  margin: auto;
+  background-color: var(--white);
+  border-radius: 5px 5px 0px 0px;
+  height: 400px;
+  width: 80%;
+}
+.card__img {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 100%;
+  height: 100%;
+}
+.card__figcaption {
+  display: grid;
+  margin: auto;
+  height: 200px;
+  width: 40%;
 }
 
-.card__subtitle{
-    color: var(--black);
-    font-family: 'PT Sans Narrow';
-    font-weight: bold;
-    font-style: normal;
-    font-size: 30px;
+.card__figcaption_text {
+  margin: auto;
 }
 
-.card__text{
-    font-family: 'Rubik';
-    font-weight: 300;
-    font-style: normal;
-    font-size: 20px;
-    margin-top: 10px;
+.card__subtitle {
+  color: var(--black);
+  font-family: "PT Sans Narrow";
+  font-weight: bold;
+  font-style: normal;
+  font-size: 30px;
 }
 
-.card__Button{
-    text-align: center;
-    margin: auto;
-    max-width: 100px;
-    padding:20px;
-    border-radius: 5px;
+.card__text {
+  font-family: "Rubik";
+  font-weight: 300;
+  font-style: normal;
+  font-size: 20px;
+  margin-top: 10px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-
-.FiExternalLink{
-    margin: 5px;
-    color: var(--blue);
-    cursor: pointer;
+.card__Button {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  text-align: center;
+  margin: auto;
+  max-width: 100px;
+  padding: 20px;
+  border-radius: 5px;
 }
 
-.FiShare2{
-    display: grid;
-    justify-content: end;
-    margin: 20px;
-    color: var(--blue);
-    cursor: pointer;
+.card__Button a:active {
+  color: var(--black);
+  font-size: 20px;
 }
-/* .bi-share{
-    cursor: pointer;
-    font-size: 20px;
-    text-align: right;
-    margin: 20px;
-    color: var(--blue);
-} */
+
+.card__Button a i {
+  margin: 3px;
+}
+
+.FiShare2 {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  text-align: center;
+  display: grid;
+  justify-content: end;
+  margin: 20px;
+  color: var(--blue);
+  cursor: pointer;
+}
+
+.FiShare2:active {
+  color: var(--black);
+  font-size: 20px;
+}
