--- a/src/components/css/share.css
+++ b/src/components/css/share.css
@@ -1,14 +1,10 @@
-.hide {
-  display: none;
-}
-
 .Share__container {
-  display: hide;
   width: 100%;
   height: 100%;
   position: fixed;
   display: grid;
   background-color: rgba(0, 0, 0, 0.902);
+  margin-top: -70px;
 }
 
 .Share {
@@ -21,13 +17,20 @@
 
 .Share__header {
   display: grid;
-  background-color: rgb(234, 230, 230);
   border-radius: 10px 10px 0px 0px;
   grid-template-columns: auto auto;
   justify-content: space-between;
   padding: 20px;
 }
 
+.Share__line {
+  display: grid;
+  justify-content: center;
+  background-color: rgba(11, 1, 1, 0.44);
+  height: 1px;
+  width: 95%;
+  margin: auto;
+}
 .Share__contents {
   display: grid;
   grid-template-columns: 110px auto;
@@ -41,18 +44,21 @@
   user-select: none;
   margin: auto;
   width: 100px;
+  height: 100px;
   border-radius: 5px;
   background-color: var(--whiteCard);
   border-radius: 5px;
-  box-shadow: 1px 1px 1px 1px #42424272;
+  box-shadow: 1px 1px 1px 1px #4242423e;
 }
 
-.Share__subtiitle{
+.Share__subtiitle {
   margin-left: 20px;
 }
 
-.Share__text{
+.Share__text {
   margin: 20px 0px 0px 20px;
+  /* font-family:'Times New Roman', Times, serif; */
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 .Share__link {
   -webkit-user-select: none;
@@ -64,13 +70,15 @@
   grid-template-columns: auto;
   padding: 20px;
   cursor: pointer;
+  font-size: 15px;
 }
 
 .Share__link:active {
   color: black;
+  font-size: 20px;
 }
 
-.FiX{
+.FiX {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -80,13 +88,7 @@
   cursor: pointer;
 }
 
-.FiX:active{
-  font-size: 30px;
+.FiX:active {
   color: rgb(10, 149, 241);
+  font-size: 35px;
 }
-/* .Share__input {
-  padding: 10px;
-  outline: none;
-} */
-
-
