--- a/src/components/css/app.css
+++ b/src/components/css/app.css
@@ -4,7 +4,7 @@
   --blackNav: #2c2c2c;
   --blackClair: #3f3f3f;
   --white: #ffffff;
-  --whiteCard: #f5f5f7;
+  --whiteCard: #fbfbfb;
   --whitekNav: #d9d9dd;
   --forminputc: #bbb0bb;
 }
