--- a/src/components/css/mediaScreen.css
+++ b/src/components/css/mediaScreen.css
@@ -30,17 +30,11 @@
     width: 80%;
   }
   .error {
-    grid-template-rows: 80px auto 100px;
-  }
-
-  .error__title {
-    font-size: 30px;
+    margin-top: 50px;
   }
 
   .error__text {
-    font-size: 15px;
-    width: 80%;
-    margin: auto;
+    font-size: 16px;
   }
 
   .Share {
