--- a/src/components/css/card.css
+++ b/src/components/css/card.css
@@ -81,20 +81,22 @@
   margin: 3px;
 }
 
+.share_button {
+  display: grid;
+  justify-content: end;
+}
+
 .FiShare2 {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  text-align: center;
-  display: grid;
-  justify-content: end;
-  margin: 20px;
   color: var(--blue);
+  margin: 20px;
+  width: 20px;
   cursor: pointer;
 }
 
 .FiShare2:active {
-  color: var(--black);
-  font-size: 20px;
+  font-size: 18px;
 }
