--- a/src/components/css/share.css
+++ b/src/components/css/share.css
@@ -10,8 +10,7 @@
 .Share {
   width: 60%;
   border-radius: 10px;
-  background-color: var(--whiteCard);
-  background-color: white;
+  background-color: var(--white);
   margin: auto;
   padding: 10px;
 }
@@ -20,21 +19,21 @@
   display: grid;
   grid-template-columns: auto auto;
   justify-content: space-between;
-  background-color: rgb(242, 241, 241);
+  border-radius: 5px;
 }
 
 .Share__title {
-padding: 10px;
+  padding: 10px;
 }
 
-/* .Share__line {
+.Share__line {
   display: grid;
   justify-content: center;
   background-color: rgba(11, 1, 1, 0.44);
   height: 1px;
   width: 95%;
   margin: auto;
-} */
+}
 
 .Share__contents {
   display: grid;
@@ -51,7 +50,6 @@ padding: 10px;
   width: 100px;
   height: 100px;
   border-radius: 5px;
-  background-color: var(--whiteCard);
   box-shadow: 1px 1px 1px 1px #4242423e;
 }
 
@@ -79,7 +77,7 @@ padding: 10px;
   font-weight: bold;
 }
 
-.FiCopy:active{
+.FiCopy:active {
   font-size: 18px;
 }
 
@@ -88,11 +86,13 @@ padding: 10px;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
   background-color: rgb(213, 212, 212);
   color: black;
   padding: 10px;
   cursor: pointer;
-  font-size: 25px;
+  margin: auto;
+  border-radius: 5px;
 }
 
 .FiX:active {
