--- a/src/components/css/share.css
+++ b/src/components/css/share.css
@@ -3,7 +3,7 @@
   height: 100%;
   position: fixed;
   display: grid;
-  background-color: rgba(0, 0, 0, 0.902);
+  background-color: rgba(0, 0, 0, 0.367);
   margin-top: -70px;
 }
 
@@ -12,7 +12,7 @@
   border-radius: 10px;
   background-color: var(--white);
   margin: auto;
-  padding: 10px;
+  padding: 50px;
 }
 
 .Share__header {
@@ -47,6 +47,7 @@
   -ms-user-select: none;
   user-select: none;
   margin: auto;
+
   width: 100px;
   height: 100px;
   border-radius: 5px;
@@ -60,12 +61,14 @@
 .Share__text {
   margin: 20px 0px 0px 20px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 25px;
 }
 .Share__link {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
   color: rgb(6, 129, 210);
   width: 30%;
   display: grid;
@@ -74,11 +77,7 @@
 }
 
 .Share__link:active {
-  font-weight: bold;
-}
-
-.FiCopy:active {
-  font-size: 18px;
+  color: var(--black);
 }
 
 .FiX {
@@ -87,15 +86,14 @@
   -ms-user-select: none;
   user-select: none;
 
-  background-color: rgb(213, 212, 212);
-  color: black;
+  color: var(--black);
   padding: 10px;
+  font-size: 40px;
   cursor: pointer;
   margin: auto;
   border-radius: 5px;
 }
 
 .FiX:active {
-  background-color: black;
-  color: rgb(213, 212, 212);
+  color: rgb(62, 60, 60);
 }
