--- a/src/components/css/mediaScreen.css
+++ b/src/components/css/mediaScreen.css
@@ -22,6 +22,12 @@
 }
 
 @media screen and (max-width: 600px) {
+  .container {
+    min-height: 80vh;
+    margin-top: 42px;
+    padding: 5px;
+  }
+
   .card__figure {
     height: 250px;
   }
