--- a/src/components/css/app.css
+++ b/src/components/css/app.css
@@ -25,6 +25,12 @@ body {
   background-color: var(--white);
 }
 
+#root {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 a {
   text-decoration: none;
   color: var(--blue);
@@ -32,9 +38,7 @@ a {
 }
 
 .container {
-  min-height: 80vh;
-  margin-top: 45px;
-  padding: 30px;
+  padding: 20px;
 }
 
 .user_select {
